fix missing dep

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
 			"!**/{package-lock.json,.npmrc,.yarnrc,.yarnclean,.yarn-error.log}",
 			"!**/*.php"
 		]
+	},
+	"dependencies": {
+		"request": "^2.88.2"
 	}
 }
